# introduction-to-autotools

./: README.md
example1/: Makefile.in  main.c
example2/: Makefile.in  configure.ac  main.c
example3/: configure.ac
example4/: AUTHORS  README  configure.ac  main.c
exercise3/: configure.ac  main.c
solutions/: solutions.md
solutions/exercise2/: Makefile.am  hello.c
solutions/exercise3/: Makefile.am  configure.ac
